implement sidebar and main navigation bar. static page for index up and running

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,101 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<header>
+  <nav>
+    <div class="nav-wrapper">
+      <ul class="right">
+        <li>
+          <a class="waves-effect waves-light" href="#">
+            <i class="material-icons left">account_box</i> SIGN UP
+          </a>
+        </li>
+        <li>
+          <a class="waves-effect waves-light" href="#">
+            <i class="material-icons right">dashboard</i> LOG IN
+          </a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
+
+<section class="main">
+  <div class="row">
+    <aside class="sidebar">
+      <p>
+        <i class="fa fa-skyatlas"></i> WORKDEY
+      </p>
+
+      <ul class="page-links">
+        <li>
+          <a href="#">
+            <i class="material-icons right tiny">home</i>HOME
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons right tiny">description</i>HOW IT WORKS
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="material-icons right tiny">account_circle</i>BECOME A TASKEE
+          </a>
+        </li>
+      </ul>
+
+      <ul class="info-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Terms &amp; Conditions</a></li>
+      </ul>
+
+      <ul class="social-media-links">
+        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+      </ul>
+    </aside>
+
+    <section class="main-section col s9 offset-s3">
+      <h1 class="center-align hero-msg">YOU HAVE BETTER THINGS TO DO</h1>
+      <p class="tagline center-align">
+        Assign tasks you don't want to do to people willing to do it.
+      </p>
+      <form class="row">
+        <div class="input-field col s7 offset-s2">
+          <i class="material-icons prefix">search</i>
+          <input type="text" placeholder="House painting">
+        </div>
+      </form>
+    </section>
+
+    <section class="steps col s9 offset-s3 center-align">
+      <h3>WORKDEY IN THREE EASY STEPS</h3>
+
+      <div class="row items">
+        <div class="col s4">
+          <i class="material-icons large">description</i>
+          <h4>Describe Task</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+          </p>
+        </div>
+        <div class="col s4">
+          <i class="material-icons large">thumbs_up_down</i>
+          <h4>Choose a Taskee</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+          </p>
+        </div>
+        <div class="col s4">
+          <i class="material-icons large">done_all</i>
+          <h4>Task gets done</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+          </p>
+        </div>
+      </div>
+  
+
+    </section>
+  </div>
+</section>
