--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
-@import "materialize";
+@import "materialize.scss";
 @import "base/mixins";
-@import "base/normalize";
-@import "base/typebase"
-@import "base/globals"
+@import "base/globals";
+@import "styles/pages";
