--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -17,6 +17,14 @@
   </nav>
 </header>
 
+<section class="dotnavigation dotstyle">
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#step">Step</a></li>
+    <li><a href="#">Link</a></li>
+  </ul>
+</section>
+
 <section class="main">
   <div class="row">
     <aside class="sidebar">
@@ -55,7 +63,7 @@
       </ul>
     </aside>
 
-    <section class="main-section col s9 offset-s3">
+    <section class="main-section col s9 offset-s3" id="home">
       <h1 class="center-align hero-msg">YOU HAVE BETTER THINGS TO DO</h1>
       <p class="tagline center-align">
         Assign tasks you don't want to do to people willing to do it.
@@ -68,7 +76,7 @@
       </form>
     </section>
 
-    <section class="steps col s9 offset-s3 center-align">
+    <section class="steps col s9 offset-s3 center-align" id="step">
       <h3>WORKDEY IN THREE EASY STEPS</h3>
 
       <div class="row items">
