--- a/app/assets/stylesheets/styles/pages.scss
+++ b/app/assets/stylesheets/styles/pages.scss
@@ -9,18 +9,17 @@
 
 .dotnavigation {
   position: fixed;
-  right: 1%;
+  right: -1%;
   top: 50%;
-  z-index: 3;
+  z-index: 999;
 
   ul {
-      //background-color: #42a49a;
-      //border-radius: 5px;
       padding: 5px;
       position: relative;
       display: inline-block;
 
     li {
+        background-color: transparent;
         border: 2px solid #42a49a;
         border-radius: 50%;
         position: relative;
@@ -30,73 +29,51 @@
         height: 16px;
         cursor: pointer;
         margin-bottom: 25px;
-        -webkit-transition: border-color 0.3s ease;
-        transition: border-color 0.3s ease;
+        -webkit-transition: border-color 0.6s ease;
+        transition: all 0.6s ease;
         z-index: 1;
 
-      &:first-child {
-        &:hover {
-           a {
-            transform: rotate(0deg) translateX(10px);
-          }
-        }
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        height: 0;
+        width: 100%;
+        background-color: #42a49a;
+        box-shadow: 0 0 1px #42a49a;
+        transition: height 0.6s ease;
       }
 
       &:hover {
-        border-color: #42a49a;
+        &::after {
+          height: 100%;
+        }
 
         a {
-          top: -22.2px;
-          z-index: 100;
-          visibility: visible;
-          opacity: 1;
-          transition: transform 0.3s ease, opacity 0.3s ease;
-          transform: rotate(0deg) translateX(15px);
+          left: -480%;
         }
       }
   
       a {
-          top: -25px;
-          left: -280%;
+          top: -9px;
+          left: 580%;
           margin-bottom: 18px;
-          visibility: hidden;
           padding: 0 10px;
           width: auto;
           height: auto;
           outline: none;
           border-radius: 0;
-          background-color: #42a49a;
-          color: #fff;
+          color: #42a49a;
+          font-weight: bold;
           text-indent: 0;
           line-height: 2;
-          opacity: 0;
-          transform: rotate(-90deg);
-          transform-origin: bottom;
           transition-duration: 0.6s;
           cursor: pointer;
           position: absolute;
 
         &:focus {
           outline: none;
-        }
-
-        &::after {
-            content: "";
-            position: absolute;
-            left: 50%;
-            margin-left: -10px;
-            width: 0;
-            height: 0;
-            border: solid transparent;
-            border-width: 10px;
-            border-color: transparent;
-            border-top-color: #42a49a;
-            pointer-events: none;
-            top: 99%;
-            -webkit-backface-visibility: hidden;
-            backface-visibility: hidden;
-            -webkit-transition: opacity 0.3s ease;
-            transition: opacity 0.3s ease;
         }
       }
 
@@ -113,7 +90,7 @@
     top: 0;
     left: 0;
     width: 25%;
-    z-index: 2;
+    z-index: 999;
 
     p {
       color: #fff;
@@ -124,6 +101,8 @@
 
     .page-links {
       padding: 15px;
+      padding-left: 50px;
+      padding-right: 45px;
       li {
         margin-bottom: 45px;
         margin-top: 45px;
@@ -136,6 +115,7 @@
 
     .info-links {
       padding: 15px;
+      padding-left: 50px;
       position: relative;
       top: 195px;
       li {
@@ -149,15 +129,10 @@
     }
 
     .social-media-links {
-      padding: 15px;
+      display: flex;
+      justify-content: space-around;
       position: relative;
       top: 195px;
-
-      li {
-        display: inline-block;
-        padding-right: 25px;
-        padding-left: 25px;
-      }
 
       a {
         color: #fff;
@@ -212,6 +187,79 @@
   }
 
   .steps {
+    //background-color: #fff;
+    color: #fff;
+    height: 100vh;
+    padding-top: 95px;
+    position: relative;
+    z-index: 99;
+
+    &::before, &::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-color: #333;
+      border-radius: 5px;
+      position: absolute;
+      top: 10px;
+      z-index: -1;
+    }
+
+    &::before {
+      left: -30px;
+      transform: rotate(-4deg);
+    }
+
+    &::after {
+      right: -30px;
+      transform: rotate(4deg);
+    }
+
+    h3 {
+      position: relative;
+
+      &::before {
+        content: "";
+        border-bottom: 2px solid #fff;
+        position: absolute;
+        bottom: -15px;
+        width: 65%;
+        height: 50px;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -30px;
+        right: 50%;
+        width: 30px;
+        height: 30px;
+        background-color: #42a49a;
+        border-radius: 100%;
+      }
+    }
+
+    .items {
+      margin-top: 95px;
+
+      .material-icons {
+        background-color: #42a49a;
+        padding: 10px;
+        position: relative;
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background-color: #fff;
+          transform: rotate(8deg);
+        }
+      }
+    }
+  }
+
+  .why-use {
     color: #666;
     height: 100vh;
     padding-top: 95px;
@@ -224,6 +272,7 @@
         border-bottom: 2px solid #666;
         position: absolute;
         bottom: -15px;
+        left: 15%;
         width: 65%;
         height: 50px;
       }
@@ -242,7 +291,41 @@
 
     .items {
       margin-top: 95px;
+
+      .more {
+        padding-top: 35px;
+        padding-bottom: 35px;
+
+        .btn {
+          margin-bottom: 20px;
+        }
+      }
     }
   }
 
+}
+
+.page-footer {
+  background-color: #333;
+  box-shadow: 0 0 3px #444;
+  color: #fff;
+  margin-top: 65px;
+  margin-bottom: 0;
+
+  .footer-links {
+    ul {
+      li {
+        display: inline-block;
+        padding-right: 15px;
+        padding-left: 15px;
+      }
+    }
+    a {
+      color: #fff;
+    }
+  }
+
+  .copyright {
+    background-color: #444;
+  }
 }
