Added dashboard and styles.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "materialize.scss";
-@import "base/mixins";
 @import "base/globals";
 @import "styles/pages";
+@import "styles/dashboard";
+@import "base/mixins";
