--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -2,6 +2,7 @@ body {
   font-family: "Source sans Pro", sans-serif;
   font-weight: 400;
   overflow-x: hidden;
+  background-color: #eee;
 }
 
 h1 {
