--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -4,12 +4,22 @@
       <ul class="right">
         <li>
           <a class="waves-effect waves-light" href="#">
-            <i class="material-icons left">account_box</i> SIGN UP
+            <i class="fa fa-exclamation-circle right"></i> NOTIFICATION
           </a>
         </li>
         <li>
           <a class="waves-effect waves-light" href="#">
-            <i class="material-icons right">dashboard</i> LOG IN
+            <i class="fa fa-user"></i>
+          </a>
+        </li>
+         <li>
+          <a class="waves-effect waves-light" href="#">
+            <i class="fa fa-cogs"></i>
+          </a>
+        </li>
+        <li>
+          <a class="waves-effect waves-light" href="#">
+            <i class="fa fa-sign-out"></i>
           </a>
         </li>
       </ul>
@@ -69,6 +79,18 @@
         <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
       </ul>
     </aside>
-  </div>
 
+    <section class="col m9 s12 offset-m3">
+    <div class="user_info">
+      <h3>WELCOME TIPSY</h3>
+      <span>Sept. 29, 2015- 314, HM, Sabo Yaba.</span>
+      <h3>QUICK USER INFO</h3>
+      <ul>
+        <ol><strong>Membership Type:</strong> <span>Gold Member</span></ol>
+        <ol><strong>Registration Date:</strong> <span>09/09/09</span></ol>
+        <ol><strong>Verification Status:</strong> <span>Verified</span></ol>
+      </ul>
+    </div>
+  </section>
+  </div>
 </section>
