Modified gemfile with rails version

--- a/app/assets/stylesheets/base/mixins.scss
+++ b/app/assets/stylesheets/base/mixins.scss
@@ -1,5 +1,4 @@
-@mixin round-edges($radius)
-{
+@mixin round-edges($radius) {
   -webkit-border-radius: $radius;
   -moz-border-radius: $radius;
   -ms-border-radius: $radius;
