--- a/app/assets/stylesheets/styles/dashboard.scss
+++ b/app/assets/stylesheets/styles/dashboard.scss
@@ -2,17 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-nav .nav-wrapper
-{
+nav .nav-wrapper {
   padding-right: 30px;
-  i
-  {
+  i {
     font-size: 1.2rem;
   }
 }
 
-.user_info
-{
+.user_info {
   background-color: #fff;
   min-height: 30em;
   margin: 3em;
