--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,9 +18,9 @@
 
   <section class="dotnavigation dotstyle">
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#step">Steps</a></li>
-    <li><a href="#why-use">Why</a></li>
+    <li><a href="#home" data-scroll>Home</a></li>
+    <li><a href="#step" data-scroll>Steps</a></li>
+    <li><a href="#why-use" data-scroll>Why</a></li>
   </ul>
 </section>
 </header>
@@ -35,17 +35,17 @@
 
       <ul class="page-links">
         <li>
-          <a href="#">
+          <a class="btn-flat waves-effect waves-light" href="#">
             <i class="material-icons right small">home</i>HOME
           </a>
         </li>
         <li>
-          <a href="#">
+          <a class="btn-flat waves-effect waves-light" href="#">
             <i class="material-icons right small">description</i>HOW IT WORKS
           </a>
         </li>
         <li>
-          <a href="#">
+          <a class="btn-flat waves-effect waves-light" href="#">
             <i class="material-icons right small">account_circle</i>BECOME A TASKEE
           </a>
         </li>
@@ -75,6 +75,13 @@
           <input type="text" placeholder="House painting">
         </div>
       </form>
+
+      <div class="scroll-wrap center-align">
+        <a href="#step" data-scroll>
+          <i class="material-icons medium scroll-item">play_for_work</i>
+        </a>
+        <p>Scroll</p>
+      </div>
     </section>
 
     <section class="steps col s9 offset-s3 center-align" id="step">
@@ -165,11 +172,11 @@
     <div class="col s6 footer-links">
       <h5>Links</h5>
       <ul>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><a href="#">Crimson</a></li>
+        <li><a href="#">Crane</a></li>
+        <li><a href="#">Abbot</a></li>
+        <li><a href="#">Auburn</a></li>
+        <li><a href="#">Robin</a></li>
       </ul>
     </div>
 
