Update social icons links, remove dummy links

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -58,9 +58,9 @@
       </ul>
 
       <ul class="social-media-links">
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        <li><a href="https://www.facebook.com/Workdey-179992722338926/?ref=aymt_homepage_panel" target="_blank"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://twitter.com/@workdeycomet" target="_blank"><i class="fa fa-twitter"></i></a></li>
+        <li><a href="https://plus.google.com/u/0/108364892635563419248" target="_blank"><i class="fa fa-google-plus"></i></a></li>
       </ul>
     </aside>
 
