--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render "layouts/header" %>
+  <%= render "layouts/sidebar" %>
 
-<%= yield %>
+  <%= yield %>
 
 <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 </body>
