--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,73 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<section class="main row">
+  <div class="col s9 offset-s3">
+      <div class="row">
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col s3"><a href="#signup">signup</a></li>
+          <li class="tab col s3"><a class="active" href="#login">login</a></li>
+        </ul>
+      </div>
+      <div id="signup" class="col s12">
+        <div class="row">
+        <form class="col s12" action="" method="post">
+          <div class="row">
+            <div class="input-field col s6">
+              <input id="first_name" type="text" class="validate">
+              <label for="first_name">First Name</label>
+            </div>
+            <div class="input-field col s6">
+              <input id="last_name" type="text" class="validate">
+              <label for="last_name">Last Name</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
+          </div>
+          <button class="btn waves-effect waves-light" type="submit" name="action"> Sign Up
+          <i class="material-icons right">send</i>
+        </button>
+        </form>
+      </div>
+
+      </div>
+
+      <div id="login" class="col s12">
+
+       <div id="signup" class="col s12">
+        <form class="col s12" action="" method="post">
+          <div class="row">
+
+            <div class="input-field col s12">
+              <input id="email" type="email" class="validate">
+              <label for="email">Email</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="password" type="password" class="validate">
+              <label for="password">Password</label>
+            </div>
+          </div>
+
+        <button class="btn waves-effect waves-light" type="submit" name="action"> Login
+          <i class="material-icons right">send</i>
+        </button>
+      </form>
+
+
+      </div>
+
+
+      </div>
+    </div>
+  </div>
+  </section>
