Update link to index page on header partial and remove dummy link

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,35 +1,33 @@
 <aside class="sidebar">
-      <p>
-        <i class="fa fa-skyatlas"></i> WORKDEY
-      </p>
+  <p>
+    <i class="fa fa-skyatlas"></i> WORKDEY
+  </p>
 
-      <ul class="page-links">
-        <li>
-          <a class="btn-flat waves-effect waves-light" href="#">
-            <i class="material-icons right small">home</i>HOME
-          </a>
-        </li>
-        <li>
-          <a class="btn-flat waves-effect waves-light" href="#">
-            <i class="material-icons right small">description</i>HOW IT WORKS
-          </a>
-        </li>
-        <li>
-          <a class="btn-flat waves-effect waves-light" href="#">
-            <i class="material-icons right small">account_circle</i>BECOME A TASKEE
-          </a>
-        </li>
-      </ul>
+  <ul class="page-links">
+    <li>
+      <%= link_to raw("<i class='material-icons right small'>home</i>HOME"), root_path, class: "btn-flat waves-effect waves-light" %>
+    </li>
+    <li>
+      <a class="btn-flat waves-effect waves-light" href="#">
+        <i class="material-icons right small">description</i>HOW IT WORKS
+      </a>
+    </li>
+    <li>
+      <a class="btn-flat waves-effect waves-light" href="#">
+        <i class="material-icons right small">account_circle</i>BECOME A TASKEE
+      </a>
+    </li>
+  </ul>
 
-      <ul class="info-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact Us</a></li>
-        <li><a href="#">Terms &amp; Conditions</a></li>
-      </ul>
+  <ul class="info-links">
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact Us</a></li>
+    <li><a href="#">Terms &amp; Conditions</a></li>
+  </ul>
 
-      <ul class="social-media-links">
-        <li><a href="https://www.facebook.com/Workdey-179992722338926/?ref=aymt_homepage_panel" target="_blank"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://twitter.com/@workdeycomet" target="_blank"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://plus.google.com/u/0/108364892635563419248" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-      </ul>
-    </aside>
+  <ul class="social-media-links">
+    <li><a href="https://www.facebook.com/Workdey-179992722338926/?ref=aymt_homepage_panel" target="_blank"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://twitter.com/@workdeycomet" target="_blank"><i class="fa fa-twitter"></i></a></li>
+    <li><a href="https://plus.google.com/u/0/108364892635563419248" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+  </ul>
+</aside>
