--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
       </div>
       <div id="signup" class="col s12">
         <div class="row">
-        <form class="col s12" action="" method="post">
+        <form class="col s12">
           <div class="row">
             <div class="input-field col s6">
               <input id="first_name" type="text" class="validate">
@@ -20,12 +20,14 @@
               <label for="last_name">Last Name</label>
             </div>
           </div>
+
           <div class="row">
             <div class="input-field col s12">
               <input id="email" type="email" class="validate">
               <label for="email">Email</label>
             </div>
           </div>
+
           <div class="row">
             <div class="input-field col s12">
               <input id="password" type="password" class="validate">
@@ -33,7 +35,7 @@
             </div>
           </div>
           <button class="btn waves-effect waves-light" type="submit" name="action"> Sign Up
-          <i class="material-icons right">send</i>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
         </button>
         </form>
       </div>
