Update user model with validations Delete duplicate view files Basic user athentication implemented

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,75 +1,60 @@
 <section class="main row">
-  <div class="col s9 offset-s3">
-      <div class="row">
+  <div class="col s6 offset-s4">
+    <div class="row">
       <div class="col s12">
         <ul class="tabs">
-          <li class="tab col s3"><a href="#signup">signup</a></li>
-          <li class="tab col s3"><a class="active" href="#login">login</a></li>
+          <li class="tab col s3"><a href="#signup" class="active">Sign Up</a></li>
+          <li class="tab col s3"><a href="#login">Login</a></li>
         </ul>
       </div>
       <div id="signup" class="col s12">
         <div class="row">
-        <form class="col s12">
-          <div class="row">
-            <div class="input-field col s6">
-              <input id="first_name" type="text" class="validate">
-              <label for="first_name">First Name</label>
-            </div>
-            <div class="input-field col s6">
-              <input id="last_name" type="text" class="validate">
-              <label for="last_name">Last Name</label>
-            </div>
-          </div>
+          <%= form_for @user, html: {class: "col s12"} do |f| %>
+            <%= render "layouts/error_msg" %>
+            <div class="row">
+              <div class="input-field col s6">
+                <%= f.text_field :firstname, required: true %>
+                <%= f.label :firstname, "First Name" %>
+              </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
-              <label for="email">Email</label>
-            </div>
-          </div>
+              <div class="input-field col s6">
+                <%= f.text_field :lastname, required: true %>
+                <%= f.label :lastname, "Last Name" %>
+              </div>
 
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="password" type="password" class="validate">
-              <label for="password">Password</label>
+              <div class="input-field col s12">
+                <%= f.email_field :email, required: true %>
+                <%= f.label :email, "Email Address" %>
+              </div>
+
+              <div class="input-field col s12">
+                <%= f.password_field :password, required: true %>
+                <%= f.label :password, "Password" %>
+              </div>
+              <%= f.button raw("Create my account <i class='material-icons right'>send</i>"), class: "btn waves-effect waves-light" %>
             </div>
-          </div>
-          <button class="btn waves-effect waves-light" type="submit" name="action"> Sign Up
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
-        </button>
-        </form>
+          <% end %>
+        </div>
       </div>
 
-      </div>
+      <div id="login" class="col s12 ">
 
-      <div id="login" class="col s12">
+          <% flash.each do | name, msg | %>
+                <%= content_tag :h6, msg, class: [name, "col offset-l1"] %>
+          <% end %>
 
-       <div id="signup" class="col s12">
-        <form class="col s12" action="" method="post">
-          <div class="row">
-
-            <div class="input-field col s12">
-              <input id="email" type="email" class="validate">
-              <label for="email">Email</label>
-            </div>
-          </div>
-          <div class="row">
-            <div class="input-field col s12">
-              <input id="password" type="password" class="validate">
-              <label for="password">Password</label>
-            </div>
-          </div>
-
-        <button class="btn waves-effect waves-light" type="submit" name="action"> Login
-          <i class="material-icons right">send</i>
-        </button>
-      </form>
-
-
-      </div>
-
-
+        <%= form_tag("/login", method: "post", class: "col s12" ) do %>
+          <%= content_tag :div, '', {class: "row"} %>
+            <%= content_tag :div, '', { class: "input-field col s12" } %>
+            <%= label_tag :email, "Email" %>
+            <%= text_field_tag :email, nil, { class: "validate", type: "email" } %>
+          <%= content_tag :div, '', { class: "row" } %>
+            <%= content_tag :div, '', { class: "input-field col s12" } %>
+            <%= label_tag :password, "Password" %>
+            <%= text_field_tag :password, nil, { class: "validate", type: "password" } %>
+            <%= submit_tag( "Login", {class: "btn"}) %>
+        <% end %>
       </div>
     </div>
   </div>
-  </section>
+</section>
