--- a/app/views/dashboard/home.html.erb
+++ b/app/views/dashboard/home.html.erb
@@ -18,7 +18,7 @@
           </a>
         </li>
         <li>
-          <a class="waves-effect waves-light" href="#">
+          <a class="waves-effect waves-light" href="/logout">
             <i class="fa fa-sign-out"></i>
           </a>
         </li>
