Implement contact mailer. Why:
We could not recieve feedback, enquires or questions from users of the platform.

This change addresses the need by:

Creating a html contact form

Using a background worker- sidekiq

Creating a ontact action in the pages controller

Implementing a smtp mail delivery system using google mail.

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -161,7 +161,7 @@ strong {
         padding-left: 15px;
       }
     }
-    
+
     a {
       color: #fff;
     }
@@ -170,4 +170,11 @@ strong {
   .copyright {
     background-color: #444;
   }
+
+}
+
+
+//  Text area
+textarea {
+  min-height: 10em;
 }
