--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -24,4 +24,4 @@
     <li><a href="https://twitter.com/@workdeycomet" target="_blank"><i class="fa fa-twitter"></i></a></li>
     <li><a href="https://plus.google.com/u/0/108364892635563419248" target="_blank"><i class="fa fa-google-plus"></i></a></li>
   </ul>
-</aside>
+</aside> workdeys1mulat10ns
