--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
-@import "materialize.scss";
+@import "bourbon";
+@import "materialize";
+@import "base/config";
+@import "base/mixins";
+@import "base/helpers";
 @import "base/globals";
 @import "styles/pages";
 @import "styles/dashboard";
-@import "base/mixins";
+@import "styles/users";
