--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,15 +10,17 @@
   <section class="main">
   <div class="row">
 
-    <section class="main-section col s9 offset-s3" id="home">
+    <section class="main-section col s12" id="home">
       <h1 class="center-align hero-msg">YOU HAVE BETTER THINGS TO DO</h1>
       <p class="tagline center-align">
         Assign tasks you don't want to do to people willing to do it.
       </p>
-      <form class="row">
-        <div class="input-field col s7 offset-s2">
-          <i class="material-icons prefix">search</i>
-          <input type="text" placeholder="House painting">
+      <form class="row center-align">
+        <div class="col s6 offset-s3">
+          <input type="text" placeholder="What do you need help with?" required>
+          <button class="btn waves-effect" type="submit">
+            <i class="material-icons left">search</i>Search
+          </button>
         </div>
       </form>
 
@@ -30,104 +32,78 @@
       </div>
     </section>
 
-    <section class="steps col s9 offset-s3 center-align" id="step">
+    <section class="steps col s12 center-align" id="step">
       <h3>WORKDEY IN THREE EASY STEPS</h3>
 
-      <div class="row items">
+      <div class="container">
+        <div class="row items">
         <div class="col s4">
           <i class="material-icons large">description</i>
           <h4>Describe Task</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+            As a tasker, you are able to create tasks of varying types and complexity.
           </p>
         </div>
         <div class="col s4">
           <i class="material-icons large">thumbs_up_down</i>
           <h4>Choose a Taskee</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+            You alone have the power to delegate any created tasks to an available person willing to carry it out.
           </p>
         </div>
         <div class="col s4">
           <i class="material-icons large">done_all</i>
           <h4>Task gets done</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi sint in eos et aperiam, consectetur porro neque nihil numquam ipsa, saepe veniam suscipit dolor iusto enim! Accusamus ea labore ipsum.
+            Sit back and relax as your assigned taskee carries out your task as smoothly and as efficiently as possible.
           </p>
         </div>
       </div>
+      </div>
     </section>
 
-    <section class="why-use col s9 offset-s3 center-align" id="why-use">
+    <section class="why-use col s12 center-align" id="why-use">
       <h3>WHY USE WORKDEY</h3>
 
-      <div class="row items">
+      <div class="container">
+        <div class="row items">
         <div class="col s6">
-          <i class="material-icons medium">flight_takeoff</i>
-          <h4>TAGLINE</h4>
+          <h4>
+            <i class="material-icons left">loyalty</i> FREE TO USE
+          </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
+            The workdey platform is entirely free to use. Anyone can get started easily, all you need is an account.
           </p>
         </div>
 
         <div class="col s6">
-          <i class="material-icons medium">loyalty</i>
-          <h4>TAGLINE</h4>
+          <h4>
+            <i class="material-icons right">stars</i> QUALITY ASSURED
+          </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
+            Taskees are professionals who are ready to put in their very best for every task.
           </p>
         </div>
 
         <div class="col s6">
-          <i class="material-icons medium">history</i>
-          <h4>TAGLINE</h4>
+          <h4>
+            <i class="material-icons left">history</i> SAVE TIME
+          </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
+            Focus on things that add value to your life. Workdey helps you live smarter by giving you time to do the important things that matter to you.
           </p>
         </div>
         <div class="col s6">
-          <i class="material-icons medium">group_work</i>
-          <h4>TAGLINE</h4>
+          <h4>
+            <i class="material-icons right">phone_in_talk</i> EASY COMMUNICATION
+          </h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
+            Stay in touch with your assigned taskee on the platform. Workdey enables seamless communication between you and taskees.
           </p>
         </div>
-
-        <div class="col s12 more">
-          <a class="waves-effect waves-light btn" href="#">More</a>
-        </div>
+      </div>
       </div>
     </section>
   </div>
 </section>
 </main>
-
-<div class="row page-footer">
-  <footer class="center-align col s9 offset-s3">
-  <div class="row">
-    <div class="col s6">
-      <h5>Footer</h5>
-      <p>Footer stuff will go in here</p>
-    </div>
-
-    <div class="col s6 footer-links">
-      <h5>Links</h5>
-      <ul>
-        <li><a href="#">Crimson</a></li>
-        <li><a href="#">Crane</a></li>
-        <li><a href="#">Abbot</a></li>
-        <li><a href="#">Auburn</a></li>
-        <li><a href="#">Robin</a></li>
-      </ul>
-    </div>
-
-    <div class="col s12 copyright">
-      <p>&copy; 2015 Copyright Text</p>
-    </div>
-  </div>
-</footer>
-</div>
