--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,59 +1,80 @@
+<%= render "partials/choose_a_path" %>
 <section class="main row">
-  <div class="col s6 offset-s4">
+  <header class="center-align">
+    <h3 class="center-align">
+      Create a new account
+    </h3>
+    <p>
+      Come join the workdey community. Set up your account.
+    </p>
+  </header>
+  <div class="col s5 offset-s1">
     <div class="row">
-      <div class="col s12">
-        <ul class="tabs">
-          <li class="tab col s3"><a href="#signup" class="active">Sign Up</a></li>
-          <li class="tab col s3"><a href="#login">Login</a></li>
-        </ul>
-      </div>
-      <div id="signup" class="col s12">
+      <div class="signup card" class="col s12">
         <div class="row">
           <%= form_for @user, html: {class: "col s12"} do |f| %>
-            <%= render "layouts/error_msg" %>
+            <%= render "partials/error_msg" %>
             <div class="row">
               <div class="input-field col s6">
-                <%= f.text_field :firstname, required: true %>
-                <%= f.label :firstname, "First Name" %>
+                <%= f.text_field :firstname, required: true, placeholder: "First Name" %>
+                <i class="material-icons">assignment_ind</i>
               </div>
 
               <div class="input-field col s6">
-                <%= f.text_field :lastname, required: true %>
-                <%= f.label :lastname, "Last Name" %>
+                <%= f.text_field :lastname, required: true, placeholder: "Last Name" %>
+                <i class="material-icons">assignment_ind</i>
               </div>
 
               <div class="input-field col s12">
-                <%= f.email_field :email, required: true %>
-                <%= f.label :email, "Email Address" %>
+                <%= f.email_field :email, required: true, placeholder: "Email Address" %>
+                <i class="material-icons">mail</i>
               </div>
 
               <div class="input-field col s12">
-                <%= f.password_field :password, required: true %>
-                <%= f.label :password, "Password" %>
+                <%= f.password_field :password, required: true, placeholder: "Password" %>
+                <i class="material-icons">lock</i>
               </div>
-              <%= f.button raw("Create my account <i class='material-icons right'>send</i>"), class: "btn waves-effect waves-light" %>
+
+              <div class="col s12">
+                <%= f.button raw("Create my account <i class='material-icons right'>send</i>"), class: "btn waves-effect" %>
+              </div>
+
+              <div class="col s12 login-path">
+                <p>Already have an account? 
+                  <a href="#">Log in</a>
+                </p>
+              </div>
             </div>
           <% end %>
         </div>
       </div>
+    </div>
+  </div>
 
-      <div id="login" class="col s12 ">
+  <div class="col s4 offset-s1 oauth">
+    <div class="card">
+      <div class="card-content">
+        <p class="be-cool">
+          Be cool. 
+          just sign up with: 
+        </p>
+        <p>
+          <a href="#" class="btn btn-fb">
+            <i class="fa fa-facebook-square"></i> Facebook
+          </a>
+        </p>
 
-          <% flash.each do | name, msg | %>
-                <%= content_tag :h6, msg, class: [name, "col offset-l1"] %>
-          <% end %>
+        <p>
+          <a href="#" class="btn btn-twt">
+            <i class="fa fa-twitter-square"></i> Twitter
+          </a>
+        </p>
 
-        <%= form_tag("/login", method: "post", class: "col s12" ) do %>
-          <%= content_tag :div, '', {class: "row"} %>
-            <%= content_tag :div, '', { class: "input-field col s12" } %>
-            <%= label_tag :email, "Email" %>
-            <%= text_field_tag :email, nil, { class: "validate", type: "email" } %>
-          <%= content_tag :div, '', { class: "row" } %>
-            <%= content_tag :div, '', { class: "input-field col s12" } %>
-            <%= label_tag :password, "Password" %>
-            <%= text_field_tag :password, nil, { class: "validate", type: "password" } %>
-            <%= submit_tag( "Login", {class: "btn"}) %>
-        <% end %>
+        <p>
+          <a href="#" class="btn btn-goog">
+            <i class="fa fa-google-plus-square"></i> Google
+          </a>
+        </p>
       </div>
     </div>
   </div>
